Delete some unnecessary stuff Query implementation Model namespace support Shuffle stuff around

--- a/src/templates/model.tmpl
+++ b/src/templates/model.tmpl
@@ -1,4 +1,9 @@
+<?php if($class_def['namespace'] != '') { ?>
+namespace <?php echo $class_def['namespace']; ?>;
+<?php } ?>
+
 class <?php echo $class_def['name']; ?> {
+
 <?php foreach($class_def['props'] as $name => $func) { ?>
     private $<?php echo $name; ?>;
 <?php } ?>
